--- a/src/App.scss
+++ b/src/App.scss
@@ -283,6 +283,63 @@ html, body {
   opacity: 1;
 }
 
+.progress-container {
+  width: 70%;
+  position: relative;
+  margin: 0 50px;
+}
+
+.seek-node {
+  height: 10px;
+  width: 10px;
+  border-radius: 20px;
+  background-color: white;
+  position: absolute;
+  right:0;
+  bottom: -4px;
+}
+
+.timers {
+  display: flex;
+  justify-content: space-between;
+  p {
+    font-size: 8px;
+  }
+  .played-sec {
+    text-align: left;
+  }
+  .duration-sec {
+    text-align: right;
+  }
+}
+
+.music-progress-bar {
+  width: 100%;
+  position: relative;
+  padding: 36px 0px;
+  height: 10px;
+  margin: 24px 0px;
+  margin-bottom: 16px;
+  padding-bottom: 0;
+  .bar {
+    height: 2px;
+    width: 100%;
+    background-color: yellow;
+    position: absolute;
+    left: 0
+  }
+  .duration {
+    background-color: $light;
+  }
+  .loaded {
+    background-color: rgba(255,255,255,.25);
+  }
+  .played {
+    background-color: white;
+  }
+
+}
+
 @media only screen and (max-width: 1920px) {
   .song-list-item {
     margin: 0 400px;
