--- a/src/App.scss
+++ b/src/App.scss
@@ -256,6 +256,13 @@ html, body {
   cursor: pointer;
 }
 
+.genre {
+  margin-top: 8px;
+  font-size: 8px;
+  text-transform: uppercase;
+  font-weight: 700;
+}
+
 .md {
   height: 100px;
   width: 100px;
